<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="24dp"
        android:text="@string/selection_sheet_title"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/selection_sheet_desc"
        android:textColor="@color/gray_light"
        app:layout_constraintStart_toStartOf="@id/title"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <LinearLayout
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="22dp"
        android:layout_marginTop="22dp"
        android:background="@drawable/bank_card_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="8dp"
        android:paddingVertical="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/desc">


        <ImageView
            android:layout_width="32dp"
            android:layout_height="28dp"
            android:src="@drawable/ic_sbi" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:text="@string/bank_2"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>

    <View
        android:id="@+id/spacer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.08"
        app:layout_constraintTop_toBottomOf="@id/list" />

    <LinearLayout
        android:id="@+id/bank_selection_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/blue_rounded"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?selectableItemBackground"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingVertical="12dp"
        app:layout_constraintTop_toBottomOf="@id/spacer">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/selection_sheet_button_label"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>