<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/primary_top_rounded">


    <LinearLayout
        android:id="@+id/collapsed_transfer_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transfer_sheet_label"
            android:textColor="@color/gray_light"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="₹ 6000 for 24 months"
            android:textColor="@color/white"
            android:textSize="20sp" />


    </LinearLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/expanded_transfer_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginTop="24dp"
            android:text="@string/transfer_sheet_title"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/transfer_sheet_desc"
            android:textColor="@color/gray_light"
            app:layout_constraintStart_toStartOf="@id/title"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <HorizontalScrollView
            android:id="@+id/scroller"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="22dp"
            android:layout_marginTop="32dp"
            android:scrollbars="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/desc">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="20dp">

                    <LinearLayout
                        android:layout_width="120dp"
                        android:layout_height="140dp"
                        android:background="@color/card_1"
                        android:orientation="vertical"
                        android:paddingHorizontal="8dp"
                        android:paddingVertical="6dp">

                        <ImageView
                            android:layout_width="18dp"
                            android:layout_height="18dp"
                            android:src="@drawable/ic_add"
                            app:tint="@color/white" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:text="@string/plan_1"
                            android:textColor="@color/white"
                            android:textSize="15sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:text="@string/month_1"
                            android:textColor="@color/gray_light"
                            android:textSize="15sp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    app:cardCornerRadius="20dp">

                    <LinearLayout
                        android:layout_width="120dp"
                        android:layout_height="140dp"
                        android:background="@color/card_2"
                        android:orientation="vertical"
                        android:paddingHorizontal="8dp"
                        android:paddingVertical="6dp">

                        <ImageView
                            android:layout_width="18dp"
                            android:layout_height="18dp"
                            android:src="@drawable/ic_selected"
                            app:tint="@color/white" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:text="@string/plan_2"
                            android:textColor="@color/white"
                            android:textSize="15sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:text="@string/month_2"
                            android:textColor="@color/gray_light"
                            android:textSize="15sp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    app:cardCornerRadius="20dp">

                    <LinearLayout
                        android:layout_width="120dp"
                        android:layout_height="140dp"
                        android:background="@color/card_3"
                        android:orientation="vertical"
                        android:paddingHorizontal="8dp"
                        android:paddingVertical="6dp">

                        <ImageView
                            android:layout_width="18dp"
                            android:layout_height="18dp"
                            android:src="@drawable/ic_add"
                            app:tint="@color/white" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:text="@string/plan_3"
                            android:textColor="@color/white"
                            android:textSize="15sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:text="@string/month_3"
                            android:textColor="@color/gray_light"
                            android:textSize="15sp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>


            </LinearLayout>


        </HorizontalScrollView>

        <View
            android:id="@+id/spacer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent="0.25"
            app:layout_constraintTop_toBottomOf="@id/scroller" />

        <LinearLayout
            android:id="@+id/bank_selection_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/blue_rounded"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?selectableItemBackground"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingVertical="12dp"
            app:layout_constraintTop_toBottomOf="@id/spacer">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/ic_bank"
                app:tint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/transfer_sheet_button_label"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>