<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/pan_sheet_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <LinearLayout
        android:id="@+id/collapsed_pan_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pan_sheet_label"
            android:textColor="@color/gray_light"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/pan_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="20sp" />


    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/expanded_pan_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginTop="32dp"
            android:text="@string/pan_sheet_title"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/pan_input"
            style="@style/Hint"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="22dp"
            android:layout_marginTop="48dp"
            android:background="@drawable/edittext_bg"
            android:hint="@string/pan_sheet_input_label"
            android:paddingHorizontal="6dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textCursorDrawable="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <View
            android:id="@+id/spacer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:visibility="invisible"
            app:layout_constraintHeight_percent="0.6"
            app:layout_constraintTop_toBottomOf="@id/pan_input" />

        <LinearLayout
            android:id="@+id/next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/blue_rounded"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?selectableItemBackground"
            android:gravity="center"
            android:paddingVertical="12dp"
            app:layout_constraintTop_toBottomOf="@id/spacer">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/ic_verify"
                app:tint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/start_process_text"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
